--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+			background: linear-gradient(135deg, #a8e6cf 0%, #dcedc1 100%);
             min-height: 100vh;
             padding: 20px;
         }
@@ -102,7 +102,7 @@
         }
         
         th {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+			background: linear-gradient(135deg, #a8e6cf 0%, #dcedc1 100%);
             color: white;
             padding: 15px;
             text-align: left;
