Update title and header text in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>現場設備 資料查看器</title>
+    <title>現場設備 查看器</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
     <style>
         * {
@@ -180,9 +180,9 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>📊 現場設備 資料查看器</h1>
+            <h1>📊 CYC設備查看器</h1>
             <div class="update-info">
-                最後更新: <span id="lastUpdate">載入中...</span> | 每 30 秒自動更新
+                最後更新: <span id="lastUpdate">載入中...</span>
             </div>
         </div>
         
