--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
         
         <div id="mqtt_info" class="tab-content">
             <div class="filter-box">
-                <label for="hostnameFilter">選擇 Hostname:</label>
+                <label for="hostnameFilter">查詢:</label>
                 <select id="hostnameFilter" onchange="filterMqttByHostname()">
                     <option value="all">全部顯示</option>
                 </select>
